Restore epsilon tolerance in LineWidth

Restore the LayoutUnit::epsilon tolerance in LineWidth::fitsOnLine calls
to avoid unnecessary breaks at element boundaries due to precision loss.

R=szager@chromium.org
BUG=613118
TEST=fast/text/sub-pixel/button-span-wrap.html

Review-Url: https://codereview.chromium.org/2026073002
Cr-Commit-Position: refs/heads/master@{#397185}

Former-commit-id: d501ee220d6edaf83e98815945e3fca7766f43dd